--- a/views/pago/registro.phtml
+++ b/views/pago/registro.phtml
@@ -59,16 +59,33 @@
         <div class="form-row">
           <div class="form-group col-md-3">
             <label>Total a Pagar</label>
-            <input name="totalPagar" type="text" class="form-control text-left" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
+            <input 
+              name="totalPagar" 
+              type="text" 
+              class="form-control text-left" 
+              data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true,
+               'digits': 0, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
             <input type="hidden" name="totalPagarNumero" value="">
           </div>
           <div class="form-group col-md-3">
             <label>Recibido</label>
-            <input name="recibido" type="text" class="form-control text-left" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
+            <input 
+              name="recibido" 
+              type="text" 
+              class="form-control text-left" 
+              data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true,
+              'digits': 0, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
+              <input type="hidden" name="recibidoNumero" value="">
           </div>
           <div class="form-group col-md-3">
             <label>A Devolver</label>
-            <input name="devolver" type="text" class="form-control text-left" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
+            <input 
+              name="devolver" 
+              type="text" 
+              class="form-control text-left" 
+              data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 
+              'digits': 0, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
+              <input type="hidden" name="devolverNumero" value="">
           </div>
         </div>
         <div class="float-right">
