--- a/views/index/indexLogin.phtml
+++ b/views/index/indexLogin.phtml
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Login</title>
+  <title><?php echo $this->titulo; ?></title>
 
   <!-- Custom fonts for this template-->
   <link href="<?php echo BASE_URL ?>public/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
