--- a/views/ticket/registro.phtml
+++ b/views/ticket/registro.phtml
@@ -11,13 +11,27 @@
         <div class="form-row">
           <div class="form-group col-md-12">
             <label>Ticket</label>
-            <input name="ticket" type="text" class="form-control" value="<?php echo $this->ticket->getNumero() ?>" disabled>
+            <input 
+              name="ticket" 
+              type="text" 
+              class="form-control" 
+              value="<?php echo $this->ticket->getNumero() ?>" 
+              disabled >
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-12">
             <label>Observaci&oacute;n</label>
-            <textarea name="observacion" type="text" class="form-control" value="" maxlength="300" rows="4" required></textarea>
+            <textarea 
+              name="observacion" 
+              type="text" 
+              class="form-control" 
+              value="" 
+              maxlength="300" 
+              rows="4" 
+              required >
+                
+              </textarea>
           </div>
         </div>
         <div class="float-right">
