--- a/views/usuario/obj.phtml
+++ b/views/usuario/obj.phtml
@@ -10,29 +10,60 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Usuario</label>
-            <input name="usuario" type="text" class="form-control" value="<?php if(isset($this->dato)){ echo $this->dato->getUsuario(); } ?>" required>
+            <input 
+              name="usuario" 
+              type="text" 
+              class="form-control" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getUsuario(); } ?>" 
+              required
+              maxlength="20" >
           </div>
           <div class="form-group col-md-6">
             <label>Documento</label>
-            <input name="documento" type="text" class="form-control" value="<?php if(isset($this->dato)){ echo $this->dato->getDocumento(); } ?>" required>
+            <input 
+              name="documento" 
+              type="text" 
+              class="form-control integer" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getDocumento(); } ?>" 
+              required
+              maxlength="10" >
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Nombre</label>
-            <input name="nombre" type="text" class="form-control" value="<?php if(isset($this->dato)){ echo $this->dato->getNombre(); } ?>" required>
+            <input 
+              name="nombre" 
+              type="text" 
+              class="form-control" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getNombre(); } ?>" 
+              required
+              maxlength="40" >
           </div>
           <div class="form-group col-md-6">
             <label>Fecha Nacimiento</label>
-            <input name="fechaNacimiento" type="text" class="form-control datepicker" value="<?php if(isset($this->dato)){ echo $this->dato->getFechaNacimiento()->format('d/m/Y'); } ?>" autocomplete="off" required>
+            <input 
+              name="fechaNacimiento" 
+              type="text" 
+              class="form-control datepicker" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getFechaNacimiento()->format('d/m/Y'); } ?>" 
+              autocomplete="off" 
+              required 
+              readonly >
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Correo</label>
-            <input name="correo" type="text" class="form-control" value="<?php if(isset($this->dato)){ echo $this->dato->getEmail(); } ?>" required>
+            <input 
+              name="correo" 
+              type="email" 
+              class="form-control" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getEmail(); } ?>" 
+              required
+              maxlength="40" >
           </div>
           <div class="form-group col-md-6">
             <label>Rol</label>
