--- a/views/tarifa/obj.phtml
+++ b/views/tarifa/obj.phtml
@@ -10,15 +10,35 @@
         <div class="form-row">
           <div class="form-group col-md-12">
             <label>Descripci&oacute;n</label>
-            <textarea name="descripcion" class="form-control" required><?php if(isset($this->dato)){ echo $this->dato->getDescripcion(); } ?></textarea>
+            <textarea 
+              name="descripcion" 
+              class="form-control" 
+              required 
+              maxlength="100" ><?php if(isset($this->dato)){ echo $this->dato->getDescripcion(); } ?></textarea>
           </div>
           <div class="form-group col-md-6">
             <label>Fecha Inicio</label>
-            <input name="fechaInicio" type="text" class="form-control datepicker" data-date-format="dd/mm/yyyy" value="<?php if(isset($this->dato)){ echo $this->dato->getFechaInicio()->format('d/m/Y'); } ?>" required>
+            <input 
+              name="fechaInicio" 
+              type="text" 
+              class="form-control datepicker" 
+              data-date-format="dd/mm/yyyy" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getFechaInicio()->format('d/m/Y'); } ?>" 
+              autocomplete="off" 
+              required
+              readonly >
           </div>
           <div class="form-group col-md-6">
             <label>Fecha Fin</label>
-            <input name="fechaFin" type="text" class="form-control datepicker" data-date-format="dd/mm/yyyy" value="<?php if(isset($this->dato)){ echo $this->dato->getFechaFin()->format('d/m/Y'); } ?>" required>
+            <input 
+              name="fechaFin" 
+              type="text" 
+              class="form-control datepicker" 
+              data-date-format="dd/mm/yyyy" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getFechaFin()->format('d/m/Y'); } ?>" 
+              autocomplete="off" 
+              required
+              readonly >
           </div>
         </div>
 
