--- a/views/ticket/index.phtml
+++ b/views/ticket/index.phtml
@@ -8,9 +8,13 @@
           <div class="card-body">
             <form method="post">
               <div class="input-group mb-3">
-                <input name="fecha" type="text" class="form-control datepicker" 
+                <input 
+                  name="fecha" 
+                  type="text" 
+                  class="form-control datepicker" 
                   autocomplete="off" 
-                  value="<?php echo $this->fecha; ?>">
+                  value="<?php echo $this->fecha; ?>"
+                  readonly >
                 <div class="input-group-append">
                   <button class="btn btn-primary" type="submit">
                     <span class="icon text-white-50">
@@ -44,7 +48,7 @@
                 <tbody>
                   <?php foreach ($this->tickets as $key => $value) { ?>
                   <tr>
-                    <td><?php echo $value->getFechaIngreso()->format('d/m/Y h:i a'); ?></td>
+                    <td><?php echo $value->getFechaIngreso()->format('d/m/Y h:i:s a'); ?></td>
                     <td><?php echo $value->getNumero(); ?></td>
                     <td><?php echo $value->getTipo()->getDescripcion(); ?></td>
                     <td>
