--- a/views/tipovehiculo/obj.phtml
+++ b/views/tipovehiculo/obj.phtml
@@ -10,11 +10,23 @@
         <div class="form-row">
           <div class="form-group col-md-12">
             <label>Descripci&oacute;n</label>
-            <input name="descripcion" type="text" class="form-control" value="<?php if(isset($this->dato)){ echo $this->dato->getDescripcion(); } ?>" maxlength="50" required>
+            <input 
+              name="descripcion" 
+              type="text" 
+              class="form-control" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getDescripcion(); } ?>" 
+              maxlength="50" 
+              required >
           </div>
           <div class="form-group col-md-12">
             <label>Resumen</label>
-            <input name="resumen" type="text" class="form-control" value="<?php if(isset($this->dato)){ echo $this->dato->getResumen(); } ?>" maxlength="3" required>
+            <input 
+              name="resumen" 
+              type="text" 
+              class="form-control" 
+              value="<?php if(isset($this->dato)){ echo $this->dato->getResumen(); } ?>" 
+              maxlength="3" 
+              required >
           </div>
         </div>
 
