Cambio de Facturacion y pago mensual

--- a/views/pago/registromensual.phtml
+++ b/views/pago/registromensual.phtml
@@ -7,7 +7,7 @@
     <div class="card-body">
       <form>
         <div class="input-group mb-3">
-          <input type="text" class="form-control form-control-lg" placeholder="Ingresar Tarjeta" id="inputTarjeta">
+          <input type="text" class="form-control form-control-lg" placeholder="Ingresar Tarjeta | N&uacute;mero de C&eacute;dula" id="inputTarjeta">
           <div class="input-group-append">
             <!-- <button class="btn btn-lg btn-primary" type="button" id="button-addon2">CALCULAR</button> -->
             <a href="" class="btn btn-primary btn-icon-split btn-lg" id="btnCalcularTarjeta">
