--- a/views/usuario/clave.phtml
+++ b/views/usuario/clave.phtml
@@ -10,15 +10,15 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label>Clave Actual</label>
-            <input name="actual" type="text" class="form-control" value="" required>
+            <input name="actual" type="password" class="form-control" value="" required>
           </div>
           <div class="form-group col-md-4">
             <label>Nueva Clave</label>
-            <input name="nueva" type="text" class="form-control" value="" required>
+            <input name="nueva" type="password" class="form-control" value="" required>
           </div>
           <div class="form-group col-md-4">
             <label>Repetir Clave</label>
-            <input name="repetida" type="text" class="form-control" value="" required>
+            <input name="repetida" type="password" class="form-control" value="" required>
           </div>
         </div>
 
