--- a/views/pago/registro.phtml
+++ b/views/pago/registro.phtml
@@ -7,6 +7,11 @@
     <div class="card-body">
       <form class="formTicket">
         <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <input type="checkbox" id="inputCheck" title="Pago Dia">
+            </div>
+          </div>
           <input type="text" class="form-control form-control-lg" placeholder="Ingresar Ticket" id="inputTicket">
           <div class="input-group-append">
             <!-- <button class="btn btn-lg btn-primary" type="button" id="button-addon2">CALCULAR</button> -->
@@ -20,6 +25,7 @@
         </div>
       </form>
     </div>
+
   </div>
 
   <div class="alert alert-danger alert-dismissible fade show" role="alert" style="display:none">
@@ -37,20 +43,21 @@
       <form class="formPago" method="post">
         <input type="hidden" name="guardar" value="1">
         <input type="hidden" name="ingreso" value="">
+        <input type="hidden" name="dia" value="">
         <div class="form-row">
           <div class="form-group col-md-3">
             <label>Fecha</label>
             <input name="fecha" type="text" class="form-control" readonly>
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-3 pagoNormal">
             <label>Hora Inicio</label>
             <input name="horaIni" type="text" class="form-control" readonly>
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-3 pagoNormal">
             <label>Hora Fin</label>
             <input name="horaFin" type="text" class="form-control" readonly>
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-3 pagoNormal">
             <label>Tiempo Total</label>
             <input name="tiempoTotal" type="text" class="form-control" readonly>
           </div>
