--- a/views/ticket/index.phtml
+++ b/views/ticket/index.phtml
@@ -1,3 +1,8 @@
+<style>
+    .modal-dialog {
+    max-width: 700px !important;
+  }
+  </style>
 <div class="container-fluid">
 
         <!-- Page Heading -->
@@ -95,6 +100,12 @@
                           <i class="far fa-thumbs-down"></i>
                       </a>
                       <?php } ?>
+                      <a class="photo"
+                        title="Fotos" 
+                        href=""
+                        ticket="<?php echo $value->getNumero(); ?>">
+                          <i class="far fa-images"></i>
+                      </a>
                     </td>
                   </tr>
                   <?php } ?>
@@ -108,3 +119,43 @@
 
 
 </div>
+
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" id="modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Fotos Ticket</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="card">
+            <div class="card-header">
+              <ul class="nav nav-tabs card-header-tabs" id="photo-list" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#entrada" role="tab" aria-controls="entrada" aria-selected="true">Entrada</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link"  href="#salida" role="tab" aria-controls="salida" aria-selected="false">Salida</a>
+                </li>
+              </ul>
+            </div>
+            <div class="card-body">
+               <div class="tab-content mt-3">
+                <div class="tab-pane active" id="entrada" role="tabpanel">
+                  <img id="imgPhotoIn" src="" alt="..." class="img-thumbnail" onerror="this.src='<?php echo BASE_URL ?>public/img/imagen-no-disponible.jpg'">
+                </div>
+                <div class="tab-pane" id="salida" role="tabpanel">  
+                  <img id="imgPhotoOut" src="" alt="..." class="img-thumbnail" onerror="this.src='<?php echo BASE_URL ?>public/img/imagen-no-disponible.jpg'">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          
+        </div>
+      </div>
+    </div>
+  </div>
