--- a/views/reporte/obj.phtml
+++ b/views/reporte/obj.phtml
@@ -13,9 +13,10 @@
             <select name="reporte" class="form-control" required>
               <option value="">Seleccione...</option>
               <option value="1">Reporte Diario</option>
-	      <option value="2">Reporte Pases Cortesia</option>
+	            <option value="2">Reporte Pases Cortesia</option>
               <option value="3">Reporte Informaci&oacute;n Tarjetas RFID</option>
-	      <option value="4">Reporte Pago Mensualidades</option>
+	            <option value="4">Reporte Pago Mensualidades</option>
+              <option value="10">Archivo Plano</option>
             </select>
           </div>
         </div>
