--- a/views/tarjeta/index.phtml
+++ b/views/tarjeta/index.phtml
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Listado de Tarjetas</h1>
+        <h1 class="h3 mb-2 text-gray-800">Listado de Tarjetas <?php echo $this->text; ?></h1>
         <!-- DataTales Example -->
 
         <div class="card shadow mb-4">
@@ -25,6 +25,7 @@
                     <th>Cliente</th>
                     <th>Fecha Inicio</th>
                     <th>Fecha Fin</th>
+                    <th>Tarifa</th>
                     <th>Tipo Vehiculo</th>
                     <th>Estado</th>
                     <th>Acciones</th>
@@ -36,6 +37,7 @@
                     <th>Cliente</th>
                     <th>Fecha Inicio</th>
                     <th>Fecha Fin</th>
+                    <th>Tarifa</th>
                     <th>Tipo Vehiculo</th>
                     <th>Estado</th>
                     <th>Acciones</th>
@@ -46,12 +48,19 @@
                   <tr>
                     <td><?php echo $value->getRfid(); ?></td>
                     <td><?php echo $value->getCliente()->getDocumento()."-".$value->getCliente()->getNombre(); ?></td>
-                    <td><?php echo $value->getFechaInicio()->format('d/m/Y'); ?></td>
-                    <td><?php echo $value->getFechaFin()->format('d/m/Y'); ?></td>
+                    <td data-order="<?php echo $value->getFechaInicio()->format("U") ?>"><?php echo $value->getFechaInicio()->format('d/m/Y'); ?></td>
+                    <td data-order="<?php echo $value->getFechaFin()->format("U") ?>"><?php echo $value->getFechaFin()->format('d/m/Y'); ?></td>
+                    <td>
+                      <?php 
+                        if($value->getTarifa()){
+                          echo $value->getTarifa()->getDescripcion(); 
+                        }
+                      ?>
+                    </td>
                     <td><?php echo $value->getTipoVehiculo()->getDescripcion(); ?></td>
                     <td>
-                      <?php if($value->getEstado()) echo "ACTIVO"; else echo "INACTIVO"; ?>
-                      </td>
+                      <?php if($value->getEstado() == 1) echo "ACTIVO"; else echo "INACTIVO"; ?>
+                    </td>
                     <td class="text-center">
                       <a title="Actualizar" href="<?php echo BASE_URL.$this->_presentRequest->getControlador().'/'; ?>actualizar/<?php echo $value->getRfid(); ?>/"><i class="fas fa-edit"></i></a>
                     </td>
