--- a/views/tarjeta/obj.phtml
+++ b/views/tarjeta/obj.phtml
@@ -2,7 +2,7 @@
 
   <div class="card shadow mb-4">
   <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">Registrar Cliente</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Registrar Tarjeta</h6>
   </div>
     <div class="card-body">
       <form class="needs-validation" novalidate method="post"> 
@@ -51,11 +51,20 @@
 
         <div class="form-row">
           <div class="form-group col-md-6">
+            <label>Tarifa </label>
+            <?php $tarifa = ""; ?>
+            <?php if(isset($this->dato) && $this->dato->getTarifa()){ $tarifa = $this->dato->getTarifa()->getId(); } ?>
+            <?php echo $this->combobox("tarifa", "Seleccione...", $this->tarifas, $tarifa, "getId", "getDescripcion", "class='form-control show-tick' data-live-search='true' required","getDescripcion"); ?>
+          </div>
+          <div class="form-group col-md-6">
             <label>Tipo Vehiculo</label>
             <?php $tipoVehiculo = ""; ?>
             <?php if(isset($this->dato)){ $tipoVehiculo = $this->dato->getTipoVehiculo()->getId(); } ?>
             <?php echo $this->combobox("tipoVehiculo", "Seleccione...", $this->tipoVehiculos, $tipoVehiculo, "getId", "getDescripcion", "class='form-control show-tick' data-live-search='true' required","getDescripcion"); ?>
           </div>
+        </div>
+
+        <div class="form-row">
           <div class="form-group col-md-6">
             <label>Estado</label>
             <select name="estado" class="form-control">
